res-tf/res-kubeflow19-core/charts/apps/mlflow/templates/VirtualService/mlflow-kubeflow-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mlflow-vs
  namespace: mlflow
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /mlflow/
    rewrite:
      uri: /
    route:
    - destination:
        host: mlflow-tracking.mlflow.svc.cluster.local
        port:
          number: 80
